css/main.css: add tweaks for footer

--- a/css/main.css
+++ b/css/main.css
@@ -98,20 +98,41 @@ textarea {
    ========================================================================== */
 
 
+#carousel-preview-page {
+	min-height: 108px;
+	min-width: 600px;
+}
 
+#carousel-preview-page ol.carousel-indicators {
+	display:none;
+}
 
+#carousel-preview-page .carousel-inner img {
+	margin: 0 auto;
+	max-height: 108px;
+}
 
+html, body {
+	  height: 100%;
+  }
 
+#wrap {
+   min-height: 100%;
+}
 
+#main {
+   overflow:auto;
+   padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
 
-
-
-
-
-
-
-
-
+.footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  background-color: #eee;
+  padding-top:20px;
+} 
 
 /* ==========================================================================
    Helper classes
